Refactor to use upper case names